Fixing overflows

--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -7,6 +7,9 @@
         margin-bottom: 50px;
     }
     &-header {
+        &-title {
+            text-align: center;
+        }
         &-image {
             margin-bottom: 20px;
             > img {
